--- a/roles/nextcloud/tasks/main.yml
+++ b/roles/nextcloud/tasks/main.yml
@@ -1,25 +1,34 @@
 ---
   # tasks file for nextcloud
   - name: Create a directory if it does not exist
-    remote_user: ansible
-    become: yes
     file:
       path: /home/ansible/uproot-nextcloud
       state: directory
+  - name: Create a directory if it does not exist
+    file:
+      path: /home/ansible/uproot-nextcloud/nginx
+      state: directory      
   - name: Copy stack configuration files
-    become: yes
-    remote_user: ansible
     copy:
-      src: "{{ item.src }}"
+      src: files/docker-compose.yml
       dest: /home/ansible/uproot-nextcloud/
       mode: 0600
       owner: ansible
       group: ansible
-    with_items:
-      - { src: 'files/docker-compose.yml'} 
+  - name: configure nginx container
+    copy:  
+      src: files/nginx/nginx.conf
+      dest: /home/ansible/uproot-nextcloud/nginx/
+      owner: ansible
+      group: ansible
+  - name: insert environment vars
+    template:
+      src: env.j2
+      dest: /home/ansible/uproot-nextcloud/.env
+      mode: 0600
+      owner: ansible
+      group: ansible
   - name: Create and start services
-    become: yes
-    remote_user: ansible
     docker_compose:
       project_src: /home/ansible/uproot-nextcloud
     register: output
