--- a/core.yml
+++ b/core.yml
@@ -23,7 +23,7 @@
     become_method: sudo
     connection: ssh
     gather_facts: yes
-    vars:       
+    vars_files:  vars/main.yml
     roles:
       - uproot
       - nextcloud
