templates for cloudflare and added vault

--- a/core.yml
+++ b/core.yml
@@ -1,23 +1,25 @@
 ---
-  - hosts: core
-    become: yes
-    become_method: sudo
-    connection: ssh
-    gather_facts: yes
-    vars:
-      compose_version: 1.25.1
-      users:
-        - username: "christopher"
-          groups: "wheel"
-          ssh_keys: https://github.com/fluxola.keys
-        - username: "ansible"
-          groups: "wheel,docker"
-          ssh_keys: https://github.com/fluxola.keys               
-    roles:
-      - core
-      - docker
-      - docker-compose
-      - nebula
+  # - hosts: core
+  #   become: yes
+  #   become_method: sudo
+  #   connection: ssh
+  #   gather_facts: yes
+  #   vars:
+  #     compose_version: 1.25.1
+  #     users:
+  #       - username: "christopher"
+  #         groups: "wheel"
+  #         ssh_keys: https://github.com/fluxola.keys
+  #         shell: /bin/bash
+  #       - username: "ansible"
+  #         groups: "wheel"
+  #         shell: /bin/bash
+  #         ssh_keys: https://github.com/fluxola.keys               
+  #   roles:
+  #     - core
+  #     - docker
+  #     - docker-compose
+  #     - nebula
   - hosts: uproot
     become: yes
     become_method: sudo
