--- a/core.yml
+++ b/core.yml
@@ -28,4 +28,8 @@
     vars_files:  vars/main.yml
     roles:
       - uproot
+  - hosts: uproot
+    connection: ssh
+    vars_files:  vars/main.yml
+    roles:
       - nextcloud
