--- a/roles/docker/meta/main.yml
+++ b/roles/docker/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
   author: Christopher Goulet
   description: your role description
-  company: Bema Technology
+  company: 
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
