--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -48,14 +48,14 @@
     state: latest
 - name: configuring auditd for docker
   copy:
-    src: ../files/audit.rules
+    src: audit.rules
     dest: /etc/audit/rules.d/
     mode: 0640
     owner: root
     group: root
 - name: configure docker daemon
   copy:
-    src: ../files/daemon.json
+    src: daemon.json
     dest: /etc/docker/
     owner: root
     group: root
