--- a/roles/nextcloud/files/docker-compose.yml
+++ b/roles/nextcloud/files/docker-compose.yml
@@ -1,59 +1,19 @@
-version: '2'
- 
+---
+version: "2"
 services:
-  nextcloud-mariadb:
-    container_name: nextcloud-mariadb
-    image: mariadb:latest
-    restart: unless-stopped
-    security_opt:
-      - no-new-privileges:true
-    networks:
-      - default
-    command: --transaction-isolation=READ-COMMITTED --binlog-format=ROW
+  nextcloud:
+    image: linuxserver/nextcloud
+    container_name: nextcloud
+    restart: unless-stopped      
     environment:
-      - "MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}"
+      - PUID=1000
+      - PGID=1000
+      - TZ=America/New_York
     volumes:
-      - ./db:/var/lib/mysql
-    labels:
-      - "traefik.enable=false"
-
-  nextcloud-fpm:
-    container_name: nextcloud-fpm
-    image: nextcloud:fpm-alpine
-    restart: unless-stopped
-    security_opt:
-      - no-new-privileges:true
-    depends_on:
-      - nextcloud-mariadb
+      - ./config:/config
+      - ./data:/data
     networks:
-      - default
-    environment:
-      - "MYSQL_HOST=nextcloud-mariadb"
-    volumes:
-      - ./app:/var/www/html
-      - ./apps:/var/www/html/custom_apps
-      - ./config:/var/www/html/config
-      - ./data:/var/www/html/data
-      - ./logs/nextcloud/nextcloud.log:/var/www/html/data/nextcloud.log
-    labels:
-      - "traefik.enable=false"
-
-  nextcloud-nginx:
-    container_name: nextcloud-nginx
-    image: nginx:latest
-    restart: unless-stopped
-    security_opt:
-      - no-new-privileges:true
-    depends_on:
-      - nextcloud-fpm
-    networks:
-      - default
       - traefik_proxy
-    volumes:
-      - ./app:/var/www/html/:ro
-      - ./apps:/var/www/html/custom_apps:ro
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro 
-      - ./logs/nginx:/var/log/nginx
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.nextcloud.entrypoints=http"
@@ -72,42 +32,20 @@ services:
       - "traefik.http.routers.nextcloud-secure.service=nextcloud"
       - "traefik.http.services.nextcloud.loadbalancer.server.port=80"
       - "traefik.docker.network=traefik_proxy" 
-
-  nextcloud-redis:
-    container_name: nextcloud-redis
-    image: redis:alpine
-    restart: unless-stopped
-    security_opt:
-      - no-new-privileges:true
-    networks: 
-      - default
+# THIS IS A WORKAROUND
+  ddclient:
+    container_name: ddclient
+    image: linuxserver/ddclient
+    restart: unless-stopped  
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=America/New York
     volumes:
-      - ./redis:/data
-    labels:
-      - "traefik.enable=false"
+      - ./ddclient:/config
 
-  nextcloud-cron:
-    container_name: nextcloud-cron
-    image: nextcloud:fpm-alpine
-    restart: unless-stopped
-    security_opt:
-      - no-new-privileges:true
-    depends_on:
-      - nextcloud-mariadb
-      - nextcloud-fpm
-      - nextcloud-redis
-    entrypoint: /cron.sh
-    networks:
-      - default
-    volumes:
-      - ./app:/var/www/html
-      - ./apps:/var/www/html/custom_apps
-      - ./config:/var/www/html/config
-      - ./data:/var/www/html/data
-      - ./logs/nextcloud/nextcloud.log:/var/www/html/data/nextcloud.log
-    labels:
-      - "traefik.enable=false"
-          
+
 networks:
+  default:
   traefik_proxy:
       external: true
